Final modifications begore prod

--- a/webapp-map/src/main/resources/articlesByTag/ohje_karttaikkuna.html
+++ b/webapp-map/src/main/resources/articlesByTag/ohje_karttaikkuna.html
@@ -22,4 +22,9 @@
 <h2> Karttatasot</h2>
 <p> Miten voin lisätä karttatasoja karttanäkymään? Lue ohjeesta, miten lisääminen onnistuu, miten voit muuttaa karttatasojen asetuksia ja miten saat näkyviin karttatasoon liittyvät kohdetiedot.</p>
 <h2> Latauskori</h2>
-<p>Miten voin ladata karttoja omaan käyttööni?</p>
+<p>Lataa karttapalvelussa olevia aineistoja omalle koneellesi. Voit ladata joko koko aineiston tai vain sinua kiinnostavat alueet. Myös useamman aineiston lataaminen onnistuu yhdellä kerralla. Lataa karttapalvelussa olevia aineistoja omalle koneellesi. Voit ladata joko koko aineiston tai vain sinua kiinnostavat alueet. Myös useamman aineiston lataaminen onnistuu yhdellä kerralla.</p>
+<p>Kaikkia aineistoja ei voi ladata latauskorin kautta (rasterit). Palvelu ilmiottaa, mikäli lataaminen ei ole mahdollista. Voit kuitenkin tiedustella kaikkia aineistoja omaan käyttöön osoitteesta sepe@hsy.fi, tai käyttää aineistoja rajapinnan kautta:</p>
+<ul>
+<li>http://kartta.hsy.fi/geoserver/wms</li>
+<li>http://kartta.hsy.fi/geoserver/wfs</li>
+</ul>
